/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Dipendenze per i test (JUunit 5 + Mockito).
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.8'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    // This dependency is used by the application.
    implementation libs.guava

    // Dipendenze per connettere il db
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.8'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.8'
    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
    
    // Dipendenze per la gestione dei 3 ruoli di accesso (Guest, User, Admin)
    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.8'

    // Dipendenze per la creazione del filtro utenti
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()

    // Disabilita il warning sull'agente dinamico in Java 21+
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}
